# File-Manager

./: LICENSE  README.md  hw2-entershei.cabal
app/: Main.hs
src/: FileSystem.hs  FileSystemTypes.hs  Parser.hs
test/: TestFileSystemSpec.hs
