name:                hw2-entershei
version:             0.1.0.0
synopsis:            Synopsis for task 2
description:         Task 2 for FP ITMO course

homepage:            https://github.com/fp-ctd-itmo/hw2-entershei
license:             MIT
license-file:        LICENSE
author:              Irina Fedorova
maintainer:          entershei@gmail.com
copyright:           2020 Irina Fedorova

category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
tested-with:         GHC == 8.6.5

library
  hs-source-dirs:      src
  exposed-modules:     FileSystem
                     , Parser
  ghc-options:         -Wall -Werror
  build-depends:       base >= 4.9 && < 5
                     , directory
                     , optparse-applicative
                     , mtl
                     , split
                     , time
  default-language:    Haskell2010

executable hw2
   hs-source-dirs:     app
   main-is:            Main.hs
   build-depends:      base >= 4.9 && < 5
                     , directory
                     , hw2-entershei
                     , optparse-applicative
                     , mtl
                     , split
                     , time
   ghc-options:        -Wall -Werror -threaded -rtsopts -with-rtsopts=-N
   default-language:   Haskell2010

test-suite hw2-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       TestFileSystemSpec
  build-depends:       base
                     , directory
                     , hedgehog
                     , hspec
                     , QuickCheck
                     , split >= 0.2.3
                     , tasty
                     , tasty-hedgehog
                     , tasty-hspec
                     , time
  ghc-options:         -Wall -Werror -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
